tests/parse/fail/illegal-67.dcf
void main() {
  int x;
  x = true ? 1;
  x = true : 1;
}